# Test_automation-Eshop-mock

./: .gitignore  README.md  app_tester.robot  pyproject.toml  run_test.cmd
customKeywords/: locators.py
